<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.PersonalRegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_pai"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="28dp">
        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:layout_constraintStart_toStartOf="@id/layout_pai"
            app:layout_constraintEnd_toEndOf="@id/layout_pai"
            app:layout_constraintTop_toTopOf="@id/layout_pai"
            android:inputType="textEmailAddress"/>
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/senha"
            app:layout_constraintStart_toStartOf="@id/layout_pai"
            app:layout_constraintEnd_toEndOf="@id/layout_pai"
            app:layout_constraintTop_toBottomOf="@id/et_email"
            android:inputType="numberPassword"/>
        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome"
            app:layout_constraintStart_toStartOf="@id/layout_pai"
            app:layout_constraintEnd_toEndOf="@id/layout_pai"
            app:layout_constraintTop_toBottomOf="@id/et_password"
            android:inputType="textPersonName"/>
        <EditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefone"
            app:layout_constraintStart_toStartOf="@id/layout_pai"
            app:layout_constraintEnd_toEndOf="@id/layout_pai"
            app:layout_constraintTop_toBottomOf="@id/et_name"
            android:inputType="phone"/>
        <EditText
            android:id="@+id/et_cpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cpf"
            app:layout_constraintStart_toStartOf="@id/layout_pai"
            app:layout_constraintEnd_toEndOf="@id/layout_pai"
            app:layout_constraintTop_toBottomOf="@id/et_phone_number"
            android:inputType="number"/>
        <EditText
            android:id="@+id/et_birthdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/data_nascimento"
            app:layout_constraintStart_toStartOf="@id/layout_pai"
            app:layout_constraintEnd_toEndOf="@id/layout_pai"
            app:layout_constraintTop_toBottomOf="@id/et_cpf"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <Button
        android:id="@+id/btn_proximo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/proximo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" android:layout_margin="32dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>