<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.CarRegisterAcitity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_pai"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="28dp">
        <EditText
            android:id="@+id/et_manufacturer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/marca"
            app:layout_constraintStart_toStartOf="@id/layout_pai"
            app:layout_constraintEnd_toEndOf="@id/layout_pai"
            app:layout_constraintTop_toTopOf="@id/layout_pai"
            android:inputType="text"/>
        <EditText
            android:id="@+id/et_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/modelo"
            app:layout_constraintStart_toStartOf="@id/layout_pai"
            app:layout_constraintEnd_toEndOf="@id/layout_pai"
            app:layout_constraintTop_toBottomOf="@id/et_manufacturer"
            android:inputType="text"/>
        <EditText
            android:id="@+id/et_plate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/placa"
            app:layout_constraintStart_toStartOf="@id/layout_pai"
            app:layout_constraintEnd_toEndOf="@id/layout_pai"
            app:layout_constraintTop_toBottomOf="@id/et_model"
            android:inputType="text"/>
        <EditText
            android:id="@+id/et_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ano_fabricacao"
            app:layout_constraintStart_toStartOf="@id/layout_pai"
            app:layout_constraintEnd_toEndOf="@id/layout_pai"
            app:layout_constraintTop_toBottomOf="@id/et_plate"
            android:inputType="number"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="32dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>